--- a/style.css
+++ b/style.css
@@ -1,9 +1,28 @@
 #container {
     display: grid;
+    width: 500px;
+    height: 500px;
+    margin: auto;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 }
 
+.control {
+    font-size: 20px;
+    color: #303030;
+    background-color: #ffffff;
+}
+
+.number {
+    background-color: #303030;
+    color: #ffffff;
+    font-size: 20px;
+}
+
 #screen {
     grid-area: 1 / 1 / 1 / 5;
+    text-align: right;
+    line-height: 100px;
+    font-size: 30px;
+    font-family: 'Orbitron', sans-serif;
 }
